Your commit message

--- a/index.html
+++ b/index.html
@@ -320,11 +320,19 @@
             <img src="assets\projects\project-3.png" alt="Project Image">
             <div class="layer">
               <h3>PROJECT THREE</h3>
+              <p class="project-description">A backend API service that allows authenticated users to submit, view, and manage feedback entries via a RESTful API, with admin control and analytics integration.</p>
+              <a href="https://github.com/Bhavyaedara7/secure_feedback_api.git"  target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+          </div>
+
+          <div class="work">
+            <img src="assets\projects\project-4.png" alt="Project Image">
+            <div class="layer">
+              <h3>PROJECT FOUR</h3>
               <p class="project-description">A modern, responsive restaurant website designed in Figma showcasing user-friendly navigation, rich visuals, and intuitive UX for food discovery and ordering.</p>
               <a href="#https://www.figma.com/design/J9WpbPqrYxqWemCBPWGyqW/Sarigama?node-id=230-197&t=9zNxxIJSeho2TzBd-1"  target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
-
         </div>
       </div>
     </section>
