Your commit message

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <h3>PROJECT TWO</h3>
               <p class="project-description">A YouTube-inspired video platform prototype wireframed in Figma and developed using HTML & CSS to mimic the core layout and video browsing experience.</p>
               <div class="project-links">
-                <a href="#https://www.figma.com/design/AkkAcp1ZnEHOLw8na6mPdw/Youtube-clone?node-id=0-1&t=3VMTifi7AcOlb6VG-1"  target="_blank"><i class="fa-solid fa-play"></i></a>
+                <a href="https://www.figma.com/design/AkkAcp1ZnEHOLw8na6mPdw/Youtube-clone?node-id=0-1&t=3VMTifi7AcOlb6VG-1"  target="_blank"><i class="fa-solid fa-play"></i></a>
                 <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
               </div> 
             </div>
@@ -330,7 +330,7 @@
             <div class="layer">
               <h3>PROJECT FOUR</h3>
               <p class="project-description">A modern, responsive restaurant website designed in Figma showcasing user-friendly navigation, rich visuals, and intuitive UX for food discovery and ordering.</p>
-              <a href="#https://www.figma.com/design/J9WpbPqrYxqWemCBPWGyqW/Sarigama?node-id=230-197&t=9zNxxIJSeho2TzBd-1"  target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="https://www.figma.com/design/J9WpbPqrYxqWemCBPWGyqW/Sarigama?node-id=230-197&t=9zNxxIJSeho2TzBd-1"  target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
         </div>
