--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </h2>
     
           <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/Resume_Bhavya.pdf')">Resume</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Resume</button>
             <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
           </div>
     
